kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: edge-api
  namespace: shift
  name: edge-api
spec:
  selector:
    app: edge-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 433
      targetPort: 80
