kubernetes/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-api
  namespace: shift
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  rules:
    - host: edge-api.shift.blue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-api
                port:
                  number: 80
